# ntsocks

./: .gitignore  LICENSE  README.md  build-nts.sh  libnts_codeline.txt  monitor.sh  ntm_codeline.txt  ntp_codeline.txt  nts_down.sh  proxy.sh  run_monitor.sh  run_proxy.sh
Documents/: NTB环境配置、相关资料整理.docx  NTB环境配置、相关资料整理.md  NTSocket性能测试报告.docx  ~$Socket性能测试报告.docx  基于NTB的传输协议的设计与实现.docx
benchmark/correctness_verification/: README.md  nts.cfg  run-client.sh
benchmark/epoll_benchmark/: Makefile  README.md  benchmark_autorun_to_file.sh
benchmark/ntb_benchmark/: Makefile  README.md  auto_data_export.py  benchmark_autorun_tofile.sh  nts.cfg
benchmark/socket_benchmark/: README.md  makefile
benchmark/unified_benchmark/: Makefile  Usage.md  benchmark_autorun_to_file_bw.sh  benchmark_autorun_to_file_lat.sh  benchmark_autorun_to_file_tput.sh  bw-client.sh  bw-server.sh  lat-nts-client.sh  lat-nts-server.sh  lat-nts.sh  (+3 more)
config/: sample_ntm.cfg
dpdk/: GNUmakefile  MAINTAINERS  Makefile  README  VERSION  meson.build  meson_options.txt  turbo-boost.sh
libfdu-utils/: Makefile  README.md  array.c  bulk_shmring  ep_eqclient_main.c  ep_eqserver_main.c  ep_eventqueue_main.c  epoll_event_queue.c  epoll_event_queue.h  epoll_msg.h  epoll_sem_shm.c  epoll_sem_shm.h  epoll_shm.c  epoll_shm.h  hash_map  hash_map.c  hash_map.h  hashmap_main.c  multi_thread_bulk_shmring  nt_log.h  ntp2nts-shm  ntp2nts_msg.c  ntp2nts_msg.h  ntp2nts_shm.c  ntp2nts_shm.h  nts_epoll.h  nts_epoll_inner.h  sem_shmring.c  sem_shmring.h  sem_shmring_main.c  shm_bulk_main.c  shm_main.c  shm_mempool.c  shm_mempool.h  shmring  shmring.c  shmring.h  shmring_bulk_main.c  shmring_bulk_multi_thread_main.c  shmring_main.c  (+2 more)
libmempool/: COPYING.MIT  Makefile  MemoryPool.h  MemoryPool.tcc  libmempool.cpp  libmempool.h  test.c  test.sh
libnts/: .cproject  .gitignore  .project  Makefile.am  README  README.md  autogen.sh  build.sh  configure.ac  nts.cfg
libnts-utils/: Makefile  README.md  array.c  array.h  data_struct.h  ep_eqclient_main.c  ep_eventqueue_main.c  epoll_event_queue.c  epoll_event_queue.h  epoll_msg.h  epoll_sem_shm.c  epoll_sem_shm.h  epoll_shm.c  epoll_shm.h  gcc_builtins.h  hash_map.c  hash_map.h  nt_atomic.h  nt_log.h  ntp2nts_msg.c  ntp2nts_msg.h  ntp2nts_shm.c  ntp2nts_shm.h  nts_epoll.h  nts_epoll_inner.h  sem_shmring.c  sem_shmring_main.c  shm_main.c  shm_mempool.c  shm_mempool.h  shmring_bulk_multi_thread_main.c  utils.c  utils.h
libnts/examples/: Makefile  Makefile.am  README.md  client  hello-nts-client.c  hello-nts.c  hello-ntsock-client.c.old  hello-ntsock-server.c.old  hello-ntsock.c  nts.cfg  nts_epoll_echo_client.c  nts_epoll_echo_server.c  partition_client.c  partition_server.c  server
libnts/examples/ntb_benchmark/: makefile
libnts/examples/ntb_benchmark/ntb-client/: client.c
libnts/examples/socket_benchmark/socket-server/: server.c
libnts/include/: Makefile.am  libnts.h  nts_api.h  nts_config.h  nts_epoll.h  nts_errno.h  nts_event.h  socket.h
libnts/lib/gtest/include/gtest/: gtest-typed-test.h
libnts/lib/gtest/include/gtest/internal/: gtest-internal.h  gtest-port.h
libnts/lib/gtest/include/gtest/internal/custom/: gtest-port.h
libnts/lib/gtest/src/: gtest-port.cc  gtest.cc
libnts/src/: Makefile.am  clock.c  debug.c  eventpoll.c  libnts.c  logger.c  nt_backlog.c  nt_port.c  ntm_shm.c  ntm_shmring.c  ntp_nts_msg.c  ntp_nts_shm.c  ntp_nts_shm.c.bak  ntp_nts_shmring.c  nts.c  nts_api.c  nts_config.c  nts_epoll.c  nts_errno.c  nts_event.c  nts_ini_parser.c  nts_memory.c  nts_msg.c  nts_shm.c  nts_shmring.c  socket.c  stat.c  timer.c
libnts/src/include/: clock.h  debug.h  eventpoll.h  logger.h  nt_atomic.h  nt_backlog.h  nt_errno.h  nt_log.h  nt_port.h  ntm_shm.h  ntm_shmring.h  ntp2nts_msg.h  ntp2nts_shm.h  ntp_nts_msg.h  ntp_nts_msg.h.bak  ntp_nts_shm.h  ntp_nts_shmring.h  nts.h  nts_api.h  nts_epoll.h  nts_errno.h  nts_event.h  nts_ini_parser.h  nts_memory.h  nts_msg.h  nts_shm.h  nts_shmring.h  shm_mempool.h  shmring.h  socket.h  stat.h  timer.h
libnts/src/utils/: array.c  nt_spsc_shm_queue.c  utils.c
libnts/src/utils/include/: nt_spsc_shm_queue.h  utils.h
libnts/tests/: Makefile.am  socket_test.cpp
monitor/: .cproject  .gitignore  .project  Makefile  README.md  constant.h  log.h  ntb-monitor  ntb-monitor.c  ntb-monitor.h  ntm.cfg  run_test  shared_memory.c  shared_memory.h
ntb-proxy/: .cproject  .gitignore  .project  AUTHORS  COPYING  Makefile.am  README  README.md  autogen.sh  build.sh  configure.ac
ntb-proxy/include/: Makefile.am  func.h  ntb-proxy.h
ntb-proxy/lib/: Makefile.am
ntb-proxy/lib/gtest/: Makefile.am
ntb-proxy/lib/gtest/include/gtest/: gtest-printers.h  gtest.h
ntb-proxy/lib/gtest/include/gtest/internal/: gtest-param-util.h  gtest-port-arch.h
ntb-proxy/lib/gtest/include/gtest/internal/custom/: gtest.h
ntb-proxy/lib/gtest/src/: gtest-death-test.cc  gtest-internal-inl.h
ntb-proxy/m4/: ax_cxx_compile_stdcxx_11.m4
ntb-proxy/src/: Makefile  Makefile.am  build.sh  config.c  func.c  hash_map.c  main.c  ntb-proxy.c  ntb-proxy.cpp  ntb.c  ntb_hw_intel.c  ntb_mem.c  ntb_mem.h  ntb_mw.c  ntb_proxy.c  ntlink-parser.c  ntlink_parser.c  ntlink_parser.h  ntm_msg.c  ntm_ntp_shm.c  ntm_ntp_shmring.c  ntm_shm.c  ntm_shmring.c  ntp.cfg  ntp_config.c  ntp_func.c  ntp_msg.c  ntp_ntm_shm.c  ntp_ntm_shmring.c  ntp_nts_msg.c  ntp_nts_msg.h  ntp_nts_shm.c  ntp_nts_shmring.c  ntp_nts_shmring.h  ntp_shm.c  ntp_shmring.c  nts_shm.c  nts_shmring.c  utils.h
ntb-proxy/src/include/: config.h  gcc_builtins.h  nt_log.h  ntb-proxy.h  ntb.h  ntb_mem.h  ntb_mw.h  ntb_proxy.h  ntlink-parser.h  ntlink_parser.h  ntm_msg.h  ntm_ntp_shm.h  ntm_ntp_shmring.h  ntm_shm.h  ntm_shmring.h  ntp_config.h  ntp_func.h  ntp_msg.h  ntp_ntm_shm.h  ntp_ntm_shmring.h  ntp_nts_shm.h  ntp_nts_shmring.h  ntp_shm.h  ntp_shmring.h  nts_shm.h  nts_shmring.h  shm_mempool.h  shmring.h
ntb-proxy/src/utils/: hash_map.c  utils.c
ntb-proxy/src/utils/include/: array.h  data_struct.h  hash_map.h  nt_atomic.h  nt_log.h  utils.h
ntb-proxy/tests/: Makefile.am  func_test.cpp  ntb-proxy_test.cpp
(+4091 files in other folders)
