dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ntb-proxy, 1.0.0, bobohuang.sun@qq.com)
AC_CONFIG_AUX_DIR(config)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE([-Wall])

AC_PROG_CXX

AC_CONFIG_FILES(Makefile 
                include/Makefile
                src/Makefile
                examples/Makefile)
AC_OUTPUT
