# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = socket.h \
		nts_api.h		\
		nts_config.h	\
		nts_epoll.h		\
		nts_errno.h		\
		nts_event.h		\
		libnts.h		\
		ntm_shmring.h	\
		ntm_shm.h		\
		nt_log.h		\
		gcc_builtins.h	\
		nt_atomic.h	
		



